
2013-07-21
----
Alon
1) Change plugin to work with the new yotpo-php lib, This version will support PHP 5.2.0 

2013-07-21
----
Alon
1) Check that php 5.2.0 and above and curl are installed on server, in case not the settings page will display proper message and yotpo will be disabled on store front end.

2013-07-21
----
Alon
1) Add flag of install step done when new user is registered.

31-07-2013
----
Alon 
1) Disable Mail after purchase and widget from products which are not checked with 'Enable reviews' checkbox.
2) Fix bug: remove short codes html tags and HTML entities from fields which contain data from users in the exported reviews.
3) Fix bug: Replace <br> tags with new line, when exporting reveiews.
4) Fix bug: Past orders issues.

11-08-2013
----
Alon 
1) Disable woocommerce ratings upon activation and restore value of woocommerce ratings when deactivating.
2) Fix bug: in some situations we were disabling woocommerce review ratings.
3) Send MAP even if review is disabled for product.

14-08-2013
----
Alon 
1) Add support to Tab manager extension.
2) Bug fix in removing native review system.

2014-01-09
----
Nimrod
1) Added b2c2b registration support.
2) Load yQuery asynchronously.

2014-02-05
----
Alon
1) Make the order status complete hook to work regardless if it is an admin page(compatible with shipstation and other remote order clients). 
2) Fix bug in bottomline in product pages.
3) Fix bug in tabmanager.

2014-02-25
----
Alon
1) Allow language code to be up to 5 letters.

2014-03-13
----
Alon
1) Bug fix: 0001924: Woocommerce new version 2.1.4: Currencies not pulled

2014-03-24
----
Alon
1) Bug fix: 0001985: typo on yotpo settings on woocommerce.  

2014-05-14
----
Alon
1) Fix export review bug.  

2014-05-21
----
Alon
1) Change the way the exported reviews file is downloaded. 

2014-06-02
----
Nimrod
1) Change in javascript and review div to work with the new widget.
