@@ -3,7 +3,7 @@ Contributors: Yotpo
 Tags: reviews, social reviews, woocommerce, woocommerce reviews, woocommerce product reviews, woocommerce extensions, woocommerce plugins, woocommerce addons, woocommerce add-ons, yotpo, yotpo reviews, yotpo social reviews
 Requires at least: 3.5.1
 Tested up to: 4.1
-Stable tag: 1.1.4
+Stable tag: 1.1.5
 License: GPLv2
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
@@ -126,4 +126,7 @@ Yes. To connect your social accounts to Yotpo, just log into yotpo.com, and clic
 
 = 1.1.4 - 01/13/2015 =
 * Added support for WooCommerce v2.2.x
+
+= 1.1.5 - 11/10/2016 =
+* Update conversion pixel
 
