@@ -165,3 +165,7 @@ Alon
 Nimrod
 1) Change in javascript and review div to work with the new widget.
 
+2016-11-10
+----
+Ohad
+1) Update new conversion pixel
